2008-10-03  Jost Boekemeier  <jostb@intern>

	* server/WEB-INF/web.xml: Added RequestListener declaration.

	* server/php/java/script/servlet/EngineFactory.java
	(releaseScriptEngines, addManaged): New procedures.
	
	* server/php/java/script/servlet/InvocablePhpServletScriptEngine
	(eval): automatically release engine at the end of the request and
	check the servlet pool
	
	* server/php/java/script/servlet/InvocablePhpServletLocalScriptEngine
	(eval): automatically release engine at the end of the request and
	check the servlet pool

	* server/php/java/script/servlet/PhpServletLocalScriptEngine.java
	(eval): check the servlet pool
	
	* server/php/java/script/servlet/PhpServletScriptEngine.java
	(eval): check the servlet pool

	* server/php/java/servlet/PhpCGIServlet.java
	(init): Removed parameter pool_size. The servlet engine's thread
	pool size is determined automatically via a mbean property or
	taken from the php.java.bridge.threads system property.
	(getServletPoolSize): Rewritten
	(checkPool): Rewritten
	(reserveContinuation): New procedure
	(releaseReservedContinuation): New procedure
	
	* server/WEB-INF/web.xml
	(shared_fast_cgi_pool): Obsolete. Users must move all libraries
	from WEB-INF/lib to the global lib.
	(max_requests): Removed. Use the php.java.bridge.threads system
	property instead, if you don't have a mbean property
	"*:type=ThreadPool,name=http*", key: "maxThreads",
	
	* FAQ
	(global-servlet): Users must remove all libraries from
	WEB-INF/lib.
	
	* server/php/java/bridge/http/HttpServer.java
	(createThreadPool): As each script may consume two servlets, the
	pool should allow up to 2 * THREAD_POOL_MAX_SIZE runnables.
    
    
2008-09-30  Jost Boekemeier  <jostb@intern>

	* server/META-INF/java/Client.inc
	(getProxy, getResult, setResult): pass the exception

	* server/META-INF/java/GlobalRef.inc: Rewritten

	* server/META-INF/java/JavaBridge.inc
	(java_autoload_function5): New function