@@ -114,8 +114,6 @@ public abstract class CGIRunner extends Thread {
 	} catch (Exception ex) {
 	    Util.printStackTrace(ex);
         } finally {
-	    try { out.flush(); } catch (IOException e) {/*ignore*/}
-	    try { err.flush(); } catch (IOException e) {/*ignore*/}
 	    phpScript.finish();
 	    scriptLock.finish();
 	}
